--- a/battleship/css/style.css
+++ b/battleship/css/style.css
@@ -14,7 +14,8 @@ div#messageArea {
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	color: rgb(83, 175, 19);
+	color: rgb(22, 51, 255);
+	font-size: 28px;
 }
 
 table {
@@ -34,12 +35,12 @@ form {
 	bottom: 0px;
 	right: 0px;
 	padding: 15px;
-	background-color: rgb(83, 175, 19);
+	background-color: rgb(13, 29, 143);
 }
 
 form input {
-	background-color: rgb(152, 207, 113);
-	border-color: rgb(83, 175, 19);
+	background-color: rgb(185, 194, 255);
+	border-color: rgb(22, 51, 255);
 	font-size: 1em;
 }
 
