--- a/practice_/css/style.css
+++ b/practice_/css/style.css
@@ -8,19 +8,27 @@ a {
 	font-family: 'Lato', sans-serif;
 	font-size: 18px;
 	color: #000000;
+	font-weight: 700;
+}
+
+a:hover {
+	text-decoration: none;
+	color: #BB5577;
 }
 
 #container {
-	max-width: 60%;
+	max-width: 65%;
 	margin: 0 auto;
 	background-color: rgba(255, 255, 255, 0.7);
 }
 
 h3 {
-	font-size: 2.5em;
+	font-size: 2.85em;
 	font-weight: 800;
-	margin-top: 30px;
-	text-align: center;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin: 0 auto;
+	color: #334422;
 }
 
 p {
@@ -39,35 +47,79 @@ ul li {
 
 #header {
 	margin: 20px;
-	padding-top: 2%;
+	padding-top: 1%;
 	height: 50px;
 }
 
 .section {
 	background-color: rgba(255, 255, 255, 0.6);
+	text-align: center;
 
 }
 
 .section p {
 	margin-top: 15px;
-	text-align: center;
+	padding: 20px;
 }
 
 div.push-left {
 	left: 15px;
 }
 
+div.push-right {
+	right: 15px;
+}
+
 .food-icon {
-	margin-top: 30px;
+	margin-top: 20px;
 	text-align: center;
 }
 
 .food-icon img {
-	width: 90px;
+	width: 20%;
+	margin-bottom: 5px;
 }
 
+.mini-rectangle {
+	width: 55px;
+	height: 8px;
+	background: #BB5577;
+	margin: 10px auto;
+}
+
+.other-color a {
+	color: #BB5577;
+	font-size: 15px;
+	font-weight: 700;
+}
+
+
 footer {
-	height: 300px;
+	padding: 20px;
+	height: auto;
 	margin-bottom: 20px; 
 }
 
+h4 {
+	font-size: 1.75em;
+	font-weight: 700;
+	margin: 10px auto;
+}
+
+ol li {
+	margin-left: -10px;
+	list-style: none;
+	font-size: 18px;
+}
+
+.mini-rectangle1 {
+	width: 55px;
+	height: 8px;
+	background: #BB5577;
+	margin: 15px 70px;
+}
+
+.fa {
+	font-size: 30px;
+	margin: 180px 5px 0;
+}
