--- a/practice_/css/style.css
+++ b/practice_/css/style.css
@@ -81,6 +81,10 @@ ul li {
 	margin: 10px auto;
 }
 
+span.other-color {
+	padding-bottom: 10px;
+}
+
 .other-color a {
 	color: #BB5577;
 	font-size: 15px;
