--- a/practice v4/css/style.css
+++ b/practice v4/css/style.css
@@ -1,4 +1,39 @@
 /*************************
+GENERAL
+*************************/
+
+body {
+	background-color: #F4F4F4;
+	font-family: 'Signika', sans-serif;
+}
+
+#wrapper {
+	max-width: 980px;
+	margin: 0 auto;
+	padding: 0 5%;
+
+}
+
+img {
+	max-width: 100%;
+}
+
+
+hr {
+	margin: 15px 0;
+	border-top: 1px solid #615f60;
+}
+
+#wrapper h2 {
+	font-weight: 700;
+}
+
+p {
+	font-size: 1.125em;
+	font-weight: 400;
+}
+
+/*************************
 HEADING
 *************************/
 
@@ -7,23 +42,31 @@ header {
 	margin: 0 0 30px 0;
 	padding: 5px 0 0 0 ;
 	width: 100%;
+	position: fixed;
+	z-index: 1;
 }
 
 #logo {
 	text-align: center;
 	margin: 0;
+	text-decoration: none;
+}
+
+h1, h2, h3, h4, h5 {
+	font-family: 'Arvo', serif;
 }
 
 h1 {
-	margin: 15px 0;
-	font-size: 1.75em;
+	margin: 25px 0 15px 0;
+	font-size: 2.2em;
 	/*font-weight: normal;*/
-	line-height: 1em;
+	/*line-height: 1em;*/
 }
 
 h2 {
-	font-size: 0.75em;
+	font-size: 1.65em;
 	margin: -5px 0 0;
+	text-align: center;
 	/*font-weight: normal;*/
 }
 
@@ -53,33 +96,132 @@ nav a {
 	padding: 15px 10px;
 }
 
-/* green header */
+/* lilac header */
 header {
-	background: #11c380;
-	border-color: #0b9762; 
+	background: #b398bb;
+	/*border-color: #410d4f; */
 }
 
 /* nav background on mobile devises */
 nav {
-	background: #0b9762;
+	/*background: #410d4f;*/
+	background: #b398bb;
 }
 
 /* logo text*/
-h1, h2 {
+h1 {
 	color: #fff;
 }
 
 /* links */
 a {
-	color: #11c380;
+	color: #0b144d;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
 }
 
 /* nav link */
 nav a, nav a:visited {
 	color: #fff;
+	text-decoration: none;
 }
 
 /* selected nav link */
 nav a.selected, nav a:hover {
-	color: #73c8a8;
-}	
+	color: #99e7e9;
+	text-decoration: none;
+}
+
+/*************************
+COVER IMAGE
+*************************/
+
+#cover-photo {
+	width: 100%;
+	overflow: hidden;
+	height: 420px;
+	background: url('../img/cat_lying_smaller.jpg') center no-repeat;
+	position: relative;
+	top: 100px;
+	background-size: cover;
+	margin-bottom: 150px;
+}
+
+
+/*************************
+INFO/ABOUT
+*************************/
+
+.info-section {
+	margin-bottom: 30px;
+	text-align: justify;
+}
+
+/*************************
+MEET THE TEAM
+*************************/
+
+.team-section {
+	margin: 40px 0;
+}
+
+.team-section img {
+	border-radius: 100%;
+	max-width: 100%;
+	/*border: 1px solid #410d4f;*/
+}
+
+.team-section p {
+	margin-top: 15px;
+}
+
+h5 {
+	font-size: 1.2em;
+	text-align: center;
+	margin: 20px;
+}
+
+/*************************
+CONTACT SECTION
+*************************/
+
+.contact-section {
+	text-align: center;
+	margin: 35px;
+}
+
+.contact-section a {
+	font-size: 30px;
+	font-weight: 700;
+}
+
+.contact-section a:hover {
+	color: #410d4f;
+}
+
+.contact-section a .fa {
+	font-size: 50px;
+	margin: 5px;
+}
+
+.contact-section a .fa:hover {
+	font-size: 50px;
+	color: #410d4f;
+}
+
+/*************************
+FOOTER
+*************************/
+
+footer {
+	background: #b398bb;
+	font-size: 0.95em;
+	text-align: center;
+	clear: both;
+	padding: 40px 0;
+	/*color: #565758;*/
+	color: #E6E6E6;
+}
