--- a/practice v4/css/style.css
+++ b/practice v4/css/style.css
@@ -20,11 +20,11 @@ img {
 
 
 hr {
-	margin: 15px 0;
+	margin: 20px 0;
 	border-top: 1px solid #615f60;
 }
 
-#wrapper h2 {
+.wrapper h2 {
 	font-weight: 700;
 }
 
@@ -37,20 +37,20 @@ p {
 HEADING
 *************************/
 
-header {
+/*header {
 	float: left;
 	margin: 0 0 30px 0;
 	padding: 5px 0 0 0 ;
 	width: 100%;
-	position: fixed;
+	position: absolute;
 	z-index: 1;
 }
 
-#logo {
+#menu {
 	text-align: center;
 	margin: 0;
 	text-decoration: none;
-}
+}*/
 
 h1, h2, h3, h4, h5 {
 	font-family: 'Arvo', serif;
@@ -79,6 +79,8 @@ nav {
 	text-align: center;
 	padding: 10px 0;
 	margin: 20px 0 0;
+	z-index: 1;
+	position: absolute;
 }
 
 nav ul {
@@ -105,7 +107,6 @@ header {
 /* nav background on mobile devises */
 nav {
 	/*background: #410d4f;*/
-	background: #b398bb;
 }
 
 /* logo text*/
@@ -145,9 +146,9 @@ COVER IMAGE
 	height: 420px;
 	background: url('../img/cat-lying.jpg') center no-repeat;
 	position: relative;
-	top: 140px;
+	/*top: 140px;*/
 	background-size: cover;
-	margin-bottom: 180px;
+	margin-bottom: 30px;
 }
 
 
@@ -166,7 +167,7 @@ MEET THE TEAM
 
 .team-section {
 	text-align: center;
-	margin: 40px 0;
+	margin: 10px 5px;
 }
 
 .team-section img {
