--- a/practice v6/css/style.css
+++ b/practice v6/css/style.css
@@ -1,4 +1,5 @@
 /* GENERAL */
+
 body {
 	max-width: 100%;
 	background-color: #E7E1E1;
@@ -19,9 +20,10 @@ a {
 }
 
 /* Buttons */
-nav {
+.button-container {
 	max-width: 100%;
-	margin-bottom: -75px;
+    margin-top: 50px;
+    margin-bottom: -112px;
 }
 
 
@@ -29,7 +31,7 @@ nav {
 	position: relative;
 	text-align: right;
 	margin: 0 6%;
-    top: 240px;
+    top: 190px;
     z-index: 1;
 }
 
@@ -39,19 +41,19 @@ nav {
 	font-size: 21px;
 }
 
-.btn-default {
+.btn-default, .btn:focus, .btn:active {
 	color: #D0C6C6;
 	background-color: #422A20;
 	border-color: #75635C;
-	-webkit-transition: .5s;
-	transition: .5s;
+	-webkit-transition: .3s;
+	transition: .3s;
 }
 
-.btn.focus, .btn:focus, .btn:hover {
+.btn.focus, .btn:hover {
 	background-color: #339966;
 	text-decoration: none;
-	-webkit-transition: .5s;
-	transition: .5s;
+	-webkit-transition: .3s;
+	transition: .3s;
 }
 /* Cover Photo */
 .cover-photo {
@@ -65,6 +67,7 @@ nav {
 
 }
 
+
 .wrap {
 	max-width: 750px;
 	padding: 25px 0;
@@ -72,6 +75,7 @@ nav {
 }
 
 h2 {
+	font-size: 1.8em;
 	color: #422A20;
 	text-align: center;
 	margin: 10px 0 15px;
@@ -83,16 +87,15 @@ h2 {
 header {
 	width: 100%;
 	/*background-color: #55443E;*/
-	background: -webkit-linear-gradient(#55443E, #5C4E49);
-	background: -o-linear-gradient(#55443E, #5C4E49); 
-  	background: -moz-linear-gradient(#55443E, #5C4E49); 
-  	background: linear-gradient(#55443E, #5C4E49); 
-	color: #fff;
+	background: -webkit-linear-gradient(#443732, #55443E, #5C4E49);
+	background: -o-linear-gradient(#443732, #55443E, #5C4E49);
+  	background: -moz-linear-gradient(#443732, #55443E, #5C4E49);
+  	background: linear-gradient(#443732, #55443E, #5C4E49);
 	margin: 0 auto;
 	text-align: left;
 }
 
-header a {
+header a, header a:active, header a:focus  {
 	color: #D0C6C6;
 	text-decoration: none;
 	-webkit-transition: .5s;
@@ -106,6 +109,9 @@ header a:hover {
 	transition: .5s;
 }
 
+
+/* menu */
+
 header .menu {
 	z-index: 1;
 }
@@ -114,7 +120,11 @@ header .menu {
 	padding: 10px;
 }
 
-/* menu */
+.menu, ol, ul {
+  padding: 0 14px 0 14px;
+/*  text-align: right;*/
+}
+
 .menu .btn {
 	padding: 5px 15px;
 	font-size: 18px;
@@ -131,10 +141,15 @@ ul li {
 	list-style: none;
 }
 
+ul {
+	margin-bottom: 0;
+}
+
 /* ABOUT SECTION */
+
 .about {
 	text-align: justify;
-	margin: 5px;
+	margin: 10px 35px;
 }
 
 
@@ -143,11 +158,11 @@ ul li {
 	max-width: 100%;
 	background-color: rgba(51, 153, 102, 0.45);
 	padding: 15px 0 25px;
-	max-width: 0 auto;
+	margin: 0 auto;
 }
 
 .box {
-	max-width: 760px;
+	max-width: 600px;
 	padding: 5px;
 	margin: auto;
 	text-align: center;
@@ -160,12 +175,12 @@ ul li {
 .box p {
 	margin: 10px;
 	text-align: center;
-	font-size: 18px;
+	font-size: 16px;
 }
 
 /* MEET THE TEAM */
 .meet-the-team {
-	max-width: 950px;
+	max-width: 945px;
 	margin: 0 auto;
 	padding: 15px 25px;
 	text-align: center;
@@ -174,25 +189,27 @@ ul li {
 .meet-the-team img {
 	border-radius: 100%;
 	max-width: 100%;
-	margin: 18px 15px;
+	margin: 0 auto;
+	padding: 10px;
 
 }
 
 .meet-the-team p {
-	margin: 5px;
+	margin: 0 auto;
+	padding-bottom: 10px;
+	font-size: 0.875em;
 	text-align: center;
 }
 
 .meet-the-team h2 {
-	margin: 20px 0;
+	margin: 15px 0;
 
 }
 
 .meet-the-team h3 {
 	margin: 0 auto;
 	font-size: 1.5em;
-	text-align: center;
-	padding-left: inherit;
+	padding-left: 5px;
 }
 
 /* SLIDER SECTION */
@@ -223,8 +240,7 @@ ul li {
 	margin: 5% 20% 15% 10%;
 	padding: 100px 0 50px;
 	color: #FFFCF7;
-	-webkit-text-stroke-width: 1px;
-   	-webkit-text-stroke-color: #301F17;
+  	text-shadow: 1px 2px #301F17;
 }
 
 .quote h1 {
@@ -243,18 +259,18 @@ footer {
 	padding: 50px 35px 50px;
 }
 
-footer a {
+footer a, footer a:focus {
 	color: #D0C6C6;
 	text-decoration: none;
-	-webkit-transition: .5s;
-	transition: .5s;
+	-webkit-transition: .3s;
+	transition: .3s;
 }
 
 footer a:hover {
 	color: #339966;
 	text-decoration: none;
-	-webkit-transition: .5s;
-	transition: .5s;
+	-webkit-transition: .3s;
+	transition: .3s;
 }
 
 .social-media .fa {
@@ -262,4 +278,247 @@ footer a:hover {
 	font-size: 35px;
 }
 
+.copyright {
+    font-size: 15px;
+}
+
+.copyright a {
+	font-weight: 700;
+}
+
+
+/* MS explorer */
+@-ms-viewport{
+    width: extend-to-zoom;
+    zoom: 1.0;
+}
+
+/* Welcome on Log In styleing */
+
+.button-container span {
+    margin: 0px;
+    font-size: 25px;
+    color: #F1EDED;
+    text-shadow: 1px 2px #301F17;
+}
+
+/* POPUPS */
+.authorize-modal {
+    position: fixed;
+    top: 12%;
+    left: 18.5%;
+    z-index: 1050;
+    width: 80%;
+    height: 80%;
+    margin-left: -10%;
+}
+
+.modal-content {
+	background-color: rgba(255,255,255, .0);
+	box-shadow: 0 3px 9px rgba(0,0,0,.0);
+	border: 1px solid rgba(0,0,0,.0);
+}
+
+.modal-open .modal {
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+label {
+	color: #422A20;
+	margin-bottom: 6px;
+	font-size: 15px;
+}
+
+/* Subscription page*/
+.cat1 {
+	width: 100%;
+	height: 500px;
+	background: url('../img/cat-window.jpg') center no-repeat;
+	position: relative;
+	background-size: cover;
+	border-top: 1px solid #E0E0E0;
+}
+
+.cat2 {
+	width: 100%;
+	height: 400px;
+	background: url('../img/sleepy-cat2.jpg') center no-repeat;
+	position: relative;
+	background-size: cover;
+	border-top: 1px solid #E0E0E0;
+}
+
 /* MEDIA QUERIES */
+
+@media (max-width: 320px) {
+	.quote h1 {
+		font-size: 1.3em;
+	}
+
+	.quote h4 {
+		font-size: 1.2em;
+	}
+
+	.cover-photo {
+		height: 380px;
+	}	
+
+	.cat-bg {
+		height: 380px;
+	}
+
+	.colour-layer {
+		height: 380px;
+	}
+
+	.meet-the-team p {
+		font-size: 1.015em;
+	}
+
+	.buttons {
+		position: relative;
+		text-align: right;
+		margin: 0 25%;
+	    top: 145px;
+	    z-index: 1;
+	}
+
+	.btn {
+		padding: 6px 19px;
+		margin: 3px;
+		font-size: 18px;
+	}
+
+	header .menu {
+		z-index: 1;
+		margin-bottom: 30px;
+	}
+
+	.modal-open .modal {
+	    overflow-x: hidden;
+	    overflow-y: auto;
+    }	
+
+}
+
+@media (max-width: 765px) {
+	.quote h1 {
+		font-size: 1.3em;
+	}
+
+	.quote h4 {
+		font-size: 1.2em;
+	}
+
+	.cover-photo {
+		height: 380px;
+	}
+
+	.cat1 {
+		height: 380px;
+	}
+
+	.cat2 {
+		height: 280px;
+	}			
+
+	.cat-bg {
+		height: 380px;
+	}
+
+	.colour-layer {
+		height: 380px;
+	}
+
+	.meet-the-team p {
+		font-size: 1.015em;
+	}
+
+	.buttons {
+		position: relative;
+		text-align: right;
+		margin: 0;
+		padding: 1%;
+	    z-index: 1;
+	}
+
+	.btn {
+		padding: 6px 19px;
+		margin: 3px;
+		font-size: 18px;
+	}
+
+	header .menu {
+		z-index: 1;
+		padding: 10px;
+		/*margin-bottom: 30px;*/
+	}
+
+	.button-container span {
+		font-size: 20px;
+	}
+
+	.menu ul li {
+		display: block;
+		margin: 10px 5px;
+		font-size: 18px;
+		text-align: center;
+	}
+
+	.modal-open .modal {
+	    overflow-x: hidden;
+	    overflow-y: auto;
+    }					
+
+}
+
+@media (max-width: 992px) and (min-width: 768px) {
+	.quote h1 {
+		font-size: 1.8em;
+	}
+
+	.quote h4 {
+		font-size: 1.3em;
+	}
+
+	.cover-photo {
+		height: 420px;
+	}
+
+	.cat1 {
+		height: 420px;
+	}
+
+	.cat2 {
+		height: 350px;
+	}
+
+	.cat-bg {
+		height: 420px;
+	}
+
+	.colour-layer {
+		height: 420px;
+	}
+
+	.meet-the-team p {
+		font-size: 1em;
+	}
+
+	.modal-open .modal {
+	    overflow-x: hidden;
+	    overflow-y: auto;
+    }	
+
+
+}
+
+@media (max-width: 1200px) and (min-width: 992px) {
+
+
+}
+
+@media (max-width: 1920px) and (min-width: 1200px) {
+
+} 
