--- a/calculator/style.css
+++ b/calculator/style.css
@@ -8,7 +8,7 @@ html {
     padding: 15px;
     width: 276px;
     height: 445px;
-    background-color: #A7D9E9;
+    background-color: #97ccdd;
     background: linear-gradient(#A8CDD8, #83BDCF);
     border-radius: 10px;
     box-shadow: 0px 10px #538DA0, 0px 15px 25px rgba(0, 0, 0, 0.35);
