--- a/calculator/style.css
+++ b/calculator/style.css
@@ -8,9 +8,9 @@ html {
     padding: 15px;
     width: 276px;
     height: 445px;
-    background-color: #A7D9E9;
+    background-color: #98d7dd;
     background: linear-gradient(#A8CDD8, #83BDCF);
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0px 10px #538DA0, 0px 15px 25px rgba(0, 0, 0, 0.35);
 }
 
@@ -47,10 +47,10 @@ a {
     font-size: 32px;
     background-color: #00A6CF;
     color: #FFFFFF;
-    border-radius: 15px;
+    border-radius: 5px;
     border: 0.5px solid #4C4C4C;
     text-align: center;
-    box-shadow: 0px 3px #0085A6, 0px 5px 10px rgba(0, 0, 0, 0.35);
+    box-shadow: 0px 3px #375462, 0px 5px 10px rgba(0, 0, 0, 0.35);
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -61,12 +61,12 @@ a {
     margin: 6px;
     padding: 5px;
     font-size: 32px;
-    background-color: #c3d7db;
+    background-color: #c8eaf0;
     color: #3A3A3A;
-    border-radius: 15px;
+    border-radius: 5px;
     border: 0.5px solid #4C4C4C;
     text-align: center;
-    box-shadow: 0px 3px #7A7A7A, 0px 5px 10px rgba(0, 0, 0, 0.35);
+    box-shadow: 0px 3px #375462, 0px 5px 10px rgba(0, 0, 0, 0.35);
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -74,19 +74,19 @@ a {
  .operators .allClear {
     background-color: #83A8BA;
     color: #fff;
-    box-shadow: 0px 3px #5E7E8E, 0px 5px 10px rgba(0, 0, 0, 0.35);
+    box-shadow: 0px 3px #375462, 0px 5px 10px rgba(0, 0, 0, 0.35);
 }
 
 .operators .clear {
     background-color: #83A8BA;
     color: #fff;
-    box-shadow: 0px 3px #5E7E8E, 0px 5px 10px rgba(0, 0, 0, 0.35);
+    box-shadow: 0px 3px #375462, 0px 5px 10px rgba(0, 0, 0, 0.35);
 }
 
 .operators .equal {
-    background-color: #3630d8;
+    background-color: #1a1840;
     color: #FFFFFF;
-    box-shadow: 0px 3px #54586f, 0px 5px 10px rgba(0, 0, 0, 0.35);
+    box-shadow: 0px 3px #000000, 0px 5px 10px rgba(0, 0, 0, 0.35);
     float: right;
     width: 250px;
     font-weight: bold;
